navBar fixes and auto collpasing navbar on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ body {
 ::-moz-selection {
   background: #D2BDFF; /* Gecko Browsers */
 }
+
+* {
+  font-family: poppins sans-serif;
+}
